--- a/intermine/webapp/main/resources/webapp/themes/araport/theme.css
+++ b/intermine/webapp/main/resources/webapp/themes/araport/theme.css
@@ -81,7 +81,7 @@ ul#nav li.activelink a{
   color:white;}
 
 ul#nav li#mymine {
-  background:#E82;}
+  background:#666;}
 
 ul#nav li.activelink {
   background:#2A65D2;}
@@ -105,7 +105,7 @@ ul#nav li a{
   border-right:1px solid #181D17;}
 
 .submenu_mymine{
-  background:#E82;}
+  background:#666;}
 
 ul#submenulist li a {
   color:#FFF;text-decoration: none;font-weight: bold;}
@@ -238,16 +238,19 @@ div.heading.results #tool_bar_div { float:left; background:#E6F7FE !important; }
 div.heading.results #tool_bar_div li { border:1px solid #D2D2D2; background:#EEEEEE; margin-right:10px; padding:4px; font-weight:normal; }
 
 /* homepage (begin.css) */
-#search-bochs div.inner h3 { background:#2A65D2; }
-#lists-bochs div.inner h3 { background:#093; color:#FFF; }
+#search-bochs div.inner h3 { background:#E82; }
+/*#lists-bochs div.inner h3 { background:#D86195; color:#FFF; }*/
+#lists-bochs div.inner h3 { background:#952C39; color:#FFF; }
   #lists-bochs div.inner a { color:#5E665C; }
-#welcome-bochs div.inner h3 { background:#E82; color:#FFF; }
+#welcome-bochs div.inner h3 { background:#9D6327; color:#FFF; }
 #low h4 { color:#5E665C; }
 
 #boxes input.dark[type="submit"] { background:url("homepage/mole.png") no-repeat scroll center bottom transparent;
   color:#FFF; padding:2px 36px; }
-#boxes input.light[type="submit"] { background:url("homepage/succ.png") no-repeat scroll center bottom transparent;
-  color:#000; padding:2px 36px; }
+/*#boxes input.light[type="submit"] { background:url("homepage/succ.png") no-repeat scroll center bottom transparent;
+  color:#000; padding:2px 36px; }*/
+#boxes input.light[type="submit"] { background:url("homepage/mole.png") no-repeat scroll center bottom transparent;
+  color:#FFF; padding:2px 36px; }
 #templates div.content p.more a, #low #rss p.more a { background: url("homepage/more-pitchurka.png") no-repeat scroll
   left center transparent; }
 
@@ -265,6 +268,7 @@ div.heading.results #tool_bar_div li { border:1px solid #D2D2D2; background:#EEE
 #pagecontentcontainer.report-page #menu-target { background:#F0FCEC; }
 #pagecontentcontainer.report-page #toc-menu-wrap div.wrap,
 #pagecontentcontainer.report-page #fixed-menu div.wrap { background:#952C39; border-color:#952C39; }
+/*#pagecontentcontainer.report-page #fixed-menu div.wrap { background:#D86195; border-color:#D86195; }*/
 #pagecontentcontainer.report-page #toc-menu-wrap div.wrap a,
 #pagecontentcontainer.report-page #fixed-menu div.wrap a { color:#FFF; }
 #pagecontentcontainer.report-page #toc-menu-wrap div.links a.current,
